# semantic_search_service

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/semantic_search_service/: fastapi_dependencies.py  main.py  resources.py
src/semantic_search_service/adapters/: psql_repo.py
src/semantic_search_service/adapters/data/: articles.json
src/semantic_search_service/domain/: articles.py  models.py
src/semantic_search_service/entrypoints/: articles_router.py  search_router.py
src/semantic_search_service/services/: articles_services.py  search_services.py
tests/: factories.py
tests/integration/: conftest.py  test_services.py
